# fastapi_sample

./: README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
