[tool.poetry]
name = "fastapi_sample"
version = "0.0.0"
description = "fastapi_sample"
authors = ["yamap55"]
license = "Creative Commons CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.79.0"
uvicorn = "0.18.2"

[tool.poetry.dev-dependencies]
# lint
flake8 = "5.0.4"
black = "22.6.0"
flake8-docstrings = "1.6.0"
flake8-quotes = "3.3.1"
flake8-bugbear = "22.7.1"

# test
pytest = "7.1.2"
pytest-cov = "3.0.0"

# notebook
ipykernel = "6.15.1"

[tool.pytest.ini_options]
junit_family = "xunit1"
addopts = "--verbose --cov --showlocals --durations=5"

[tool.coverage.run]
omit = ["*/tests/*", "*/site-packages/*"]
